Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/T8059921/ForbidAccessToFieldUsingSuperTest.out
ForbidAccessToFieldUsingSuperTest.java:24:19: compiler.err.not.encl.class: ForbidAccessToFieldUsingSuperTest.T1
ForbidAccessToFieldUsingSuperTest.java:25:19: compiler.err.not.encl.class: ForbidAccessToFieldUsingSuperTest.T1
2 errors
